cabal-version: 3.0
name: gui-programs
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

common common-extensions
  default-extensions:
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    PackageImports
    PolyKinds
    RecordWildCards
    RequiredTypeArguments
    StrictData
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  default-language: GHC2024

common common-ghc-options
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -fhide-source-paths
    -Wno-unused-do-bind
    -funbox-strict-fields
    -Wunused-packages
    -funbox-small-strict-fields
    -Werror=incomplete-patterns

common common-rts-options
  ghc-options:
    -rtsopts
    -threaded
    -with-rtsopts=-N

executable combobox
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: combobox/Main.hs
  build-depends:
    base ^>=4.20,
    iced-hs,

  hs-source-dirs: app
  default-language: GHC2024

executable todo
  import: common-extensions
  import: common-ghc-options
  import: common-rts-options
  main-is: todo/Main.hs
  build-depends:
    atomic-counter,
    base ^>=4.20,
    iced-hs,
    text,
    vector,

  hs-source-dirs: app
  default-language: GHC2024
